@@ -1,3 +1,10 @@
+2019-08-28  Ross Kirsling  <ross.kirsling@sony.com>
+
+        Unreviewed. Restabilize non-unified build.
+
+        * inspector/agents/WebConsoleAgent.h:
+        * loader/ResourceLoadObserver.h:
+
 2019-08-28  Simon Fraser  <simon.fraser@apple.com>
 
         Devirtualize RenderBox::visualOverflowRect()
