@@ -1,3 +1,9 @@
+2019-08-28  Ross Kirsling  <ross.kirsling@sony.com>
+
+        Unreviewed. Restabilize non-unified build.
+
+        * runtime/PropertySlot.h:
+
 2019-08-28  Mark Lam  <mark.lam@apple.com>
 
         Wasm's AirIRGenerator::addLocal() and B3IRGenerator::addLocal() are doing unnecessary overflow checks.
